feat: 친구 삭제, 친구 목록 조회 수정 #4