@@ -1,18 +1,19 @@
 package com.tripleS.server.friend.service;
 
-import com.tripleS.server.friend.domain.Friend;
-import com.tripleS.server.friend.dto.response.GetFriendsResponse;
+import com.tripleS.server.friend.dto.response.FriendResponse;
 import com.tripleS.server.friend.exception.FriendNotFoundException;
 import com.tripleS.server.friend.exception.errorcode.FriendErrorCode;
 import com.tripleS.server.friend.repository.FriendRepository;
+import com.tripleS.server.user.domain.User;
 import com.tripleS.server.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Transactional(readOnly = true)
 @Service
 @RequiredArgsConstructor
@@ -21,21 +22,26 @@ public class FriendService {
     private final FriendRepository friendRepository;
     private final UserRepository userRepository;
 
-    public List<GetFriendsResponse> getFriends (Long userId) {
+    public List<FriendResponse> getFriendList(Long userId) {
 
-        List<Friend> friendsList =  friendRepository.findAllById(userId);
+        User user = userRepository.findByIdFetchFriend(userId)
+                .orElseThrow(() -> new FriendNotFoundException(FriendErrorCode.FRIEND_NOT_FOUND));
 
-        return friendsList.stream()
-                .map(friend -> GetFriendsResponse.from(friend.getUser()))
-                .collect(Collectors.toList());
+        user.getFriendList().forEach(friend -> log.info("friend: {}", friend.getFriend().getNickname()));
+
+        return user.getFriendList().stream()
+                .map(FriendResponse::from)
+                .toList();
     }
 
     @Transactional
-    public void deleteFriends (Long userId, Long friendId) {
+    public void deleteFriend(Long userId, Long friendId) {
 
-        Friend friend = friendRepository.findByUserIdAndId(userId, friendId)
-                .orElseThrow(() -> new FriendNotFoundException(FriendErrorCode.FRIEND_NOT_FOUND));
-
-        friendRepository.delete(friend);
+        friendRepository.findByUserIdAndFriendId(userId, friendId)
+                .ifPresentOrElse(
+                        friendRepository::delete,
+                        () -> {
+                            throw new FriendNotFoundException(FriendErrorCode.FRIEND_NOT_FOUND);
+                        });
     }
 }
